--- a/style.css
+++ b/style.css
@@ -60,7 +60,7 @@ footer {
     text-align: center;   
 }
 @media screen and (max-width: 480px) {
-    .principal, .titulo, p, #btn{
+    .principal, .secundaria, .texto-resultado, p, #btn{
         width: auto;
     }
     .instagram {
