--- a/style.css
+++ b/style.css
@@ -7,7 +7,6 @@
     font-family: 'Josefi', sans-serif;
     text-align: center;
     color: blue;
-    
 }
 .principal {
     margin-top: 15%;
@@ -43,6 +42,7 @@
     width: 130px;
     padding: 5px;
 }
+/*Rodapé*/
 footer {
     position: relative;
     display: inline-block;
@@ -59,6 +59,7 @@ footer {
     font-size: 10px;
     text-align: center;   
 }
+/*Formatação para mobile*/
 @media screen and (max-width: 480px) {
     .principal, .secundaria, .texto-resultado, p, #btn{
         width: auto;
