alteraçõa de plano de fundo e foco

--- a/style.css
+++ b/style.css
@@ -3,11 +3,12 @@
 *{  
     margin: 0;
     padding: 0;
-    background: lightgrey;
     font-family: 'Josefi', sans-serif;
     text-align: center;
     color: blue;
 }
+body {
+    background: linear-gradient(90deg, rgba(154, 174, 186, 0.81), rgb(159, 67, 67));}
 .principal {
     margin-top: 15%;
     font-weight: bold;
@@ -27,6 +28,7 @@
     border-radius: 10px;
     transition: 2s;
     transform: 2s;
+    cursor: pointer;
 }
 #btn p {
     color: white;
@@ -34,25 +36,35 @@
     font-size: 15px;
 }
 #btn p:hover {
-    font-size: 18px;
+    font-size: 16px;
+    color: yellow;
 }
 /*input*/
 #valor {
     background: white;
     width: 130px;
     padding: 5px;
+    border-radius: 5px;
+}
+.texto-resultado {
+    margin: 20px ;
+}
+#resultado {
+    padding: 3px;
+    border: 1px solid black;
+    border-radius: 20px;
+}
+.meses {
+    margin: 10px;
+    
 }
 /*Rodapé*/
 footer {
     position: relative;
     display: inline-block;
 }
-.instagram {
-    width: 20px;
-    margin-top: 50px;
-}
-.github, .linkedin {
-    width: 20px;  
+.github, .linkedin, .instagram {
+    width: 30px;  
 }
 .copyright {
     color: black;
