--- a/style.css
+++ b/style.css
@@ -53,6 +53,8 @@ body {
     padding: 3px;
     border: 1px solid black;
     border-radius: 20px;
+    background: white;
+
 }
 .meses {
     margin: 10px;
